@@ -1,3 +1,13 @@
+2007-05-24  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ipipe.py: Added a Table ihist that can be used to
+	browse the IPython input history
+
+	* IPython/Extensions/ibrowse.py: Added two command to ibrowse: pickinput
+	(mapped to "i") can be used to put the object under the curser in the input
+	line. pickinputattr (mapped to "I") does the same for the attribute under
+	the cursor.
+
 2007-05-24  Ville Vainio  <vivainio@gmail.com>
 
 	* Grand magic cleansing (changeset [2380]):
